Arreglo store articulo y base de datos

--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql-5707.dinaserver.com
 DB_PORT=3306
-DB_DATABASE=dressupyourself
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=allsi_dressup
+DB_USERNAME=allsi_app_dress
+DB_PASSWORD=DressUp2023!
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
